# nushell-web-demo

./: .gitattributes  .gitmodules  Cargo.toml  index.html  package-lock.json  package.json  styles.scss  themes.nuon  toolkit.nu
.github/workflows/: cd.yml  ci.yml
src/: main.rs
src/nu/: mod.rs  render.rs
src/nu/commands/vfs/: mod.rs
src/ui/: ace.rs  mod.rs
src/ui/layout/: mod.rs
src/ui/output/: html.rs  json.rs  mod.rs  raw.rs
src/util/: mod.rs  themes.rs
styles/: styles.scss
vfs/: README.md
vfs/config/: settings.yml
vfs/data/: employees.csv  products.json
vfs/notes/: todo.txt
