[package]
name = "nushell-web-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# dependencies for web development
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.0", features = ["csr"] }
leptos-use = "*"
js-sys = "*"
web-sys = "*"
wasm-bindgen = "*"
serde = "1"
serde-wasm-bindgen = "*"
parking_lot = "0.12.3"
codee = "*"

# nu
nu-cmd-extra = { version = "0.101.0", default-features = false }
nu-cmd-lang = { version = "0.101.0", default-features = false }
nu-command = { version = "0.101.0", default-features = false }
nu-engine = { version = "0.101.0", default-features = false }
nu-parser = { version = "0.101.0", default-features = false }
nu-protocol = { version = "0.101.0", default-features = false }
nuon = { version = "0.101.0", default-features = false }

# general stuff
thiserror = "1"

[patch.crates-io]
nu-cmd-extra = { git = "https://github.com/cptpiepmatz/nushell.git", rev = "1ed4565c9b939a7224d3a52d9a455dca37c8b63e" }
nu-cmd-lang = { git = "https://github.com/cptpiepmatz/nushell.git", rev = "1ed4565c9b939a7224d3a52d9a455dca37c8b63e" }
nu-command = { git = "https://github.com/cptpiepmatz/nushell.git", rev = "1ed4565c9b939a7224d3a52d9a455dca37c8b63e" }
nu-engine = { git = "https://github.com/cptpiepmatz/nushell.git", rev = "1ed4565c9b939a7224d3a52d9a455dca37c8b63e" }
nu-parser = { git = "https://github.com/cptpiepmatz/nushell.git", rev = "1ed4565c9b939a7224d3a52d9a455dca37c8b63e" }
nu-protocol = { git = "https://github.com/cptpiepmatz/nushell.git", rev = "1ed4565c9b939a7224d3a52d9a455dca37c8b63e" }
nuon = { git = "https://github.com/cptpiepmatz/nushell.git", rev = "1ed4565c9b939a7224d3a52d9a455dca37c8b63e" }


