[package]
name = "nushell-web-demo"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/cptpiepmatz/nushell-web-demo"

[dependencies]
# dependencies for web development
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.0", features = ["csr"] }
leptos-use = "0.15" # choose compatible with leptos
js-sys = "0.3" # use same as web-sys
web-sys = "0.3" # use same as leptos
wasm-bindgen = "0.2" # use same as leptos
serde = "1"
serde-wasm-bindgen = "0.6"
parking_lot = "0.12.3"
codee = "0.2" # use same as leptos-use

# nu
nu-cmd-extra = { version = "0.103.0", default-features = false }
nu-cmd-lang = { version = "0.103.0", default-features = false }
nu-command = { version = "0.103.0", default-features = false }
nu-engine = { version = "0.103.0", default-features = false }
nu-parser = { version = "0.103.0", default-features = false }
nu-path = { version = "0.103.0", default-features = false }
nu-protocol = { version = "0.103.0", default-features = false }
nu-utils = { version = "0.103.0", default-features = false }
nuon = { version = "0.103.0", default-features = false }

# general stuff
thiserror = "1"

# virtual file system
vfs = "0.12"
vfs-shadow = "0.1"
